# pixie

./: .gitattributes  .gitignore  .redocly.yaml  CLAUDE.md  Cargo.toml  GEMINI_IMPLEMENTATION.md  README.md  deploy.sh  openapi.yaml  operator-policy.yml  package.json  wrangler.toml  wrangler.toml.example
.claude/: settings.json
.claude/agents/: android-compose-expert.md  ios-uikit-master.md
.github/workflows/: ci.yml  release.yml
android/: .gitignore  ANDROID_APP_PLAN.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
cli/: .gitignore  Cargo.toml
cli/src/: api.rs  auth.rs  config.rs  error_handler.rs  main.rs
cli/src/cli/: admin.rs  app.rs  auth.rs  credits.rs  gallery.rs  mod.rs
cli/src/commands/: admin.rs  credits.rs  edit.rs  gallery.rs  generate.rs  mod.rs  usage.rs  utils.rs
docs/: README_OPENSOURCE.md  SETUP.md  metrics.csv  pricing.md  store-playbook.md
examples/: test_edit.sh  test_edit_cli.sh
iOS/: iOS_APP_PLAN.md  iPADOS_OPTIMIZATION_PLAN.md
marketing/: app-node.yml
migrations/: 001_schema.sql  002_multitenant.sql  003_config.sql  005_users_drop_global_unique.sql  006_apps_premium_entitlement.sql  007_seed_dreameater.sql  008_seed_psybeam.sql  009_pixie_relaunch.sql  010_apps_default_chat_model.sql  011_image_visibility.sql  013_psybeam_economics.sql
src/: auth.rs  credits.rs  crypto_payments.rs  deployment.rs  error.rs  lib.rs  logger.rs  models.rs  privacy.rs  privacy_policy.html  rate_limit.rs  storage.rs  stripe_payments.rs  swagger-ui.html
src/handlers/: chat.rs  (+15 more)
(+258 files in other folders)
