[package]
name = "openai-image-proxy"
version = "0.1.0"
edition = "2021"
description = "A Cloudflare Worker-based proxy for OpenAI's GPT Image API with credit billing and OAuth"
repository = "https://github.com/guitaripod/openai-image-proxy"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.6.0", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
console_error_panic_hook = "0.1"
async-trait = "0.1"
url = "2.5"
urlencoding = "2"
[target.'cfg(not(target_os = "windows"))'.dependencies]
jwt-simple = "0.12"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
