[package]
name = "openai-image-proxy-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pixie"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
anyhow = "1"
webbrowser = "0.8"
base64 = "0.21"
chrono = "0.4"
colored = "2"
indicatif = "0.17"
image = "0.24"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"